--- a/public/assets/styles/sass/style.scss
+++ b/public/assets/styles/sass/style.scss
@@ -1,4 +1,5 @@
 @use "abstracts/varcolors.scss";
 @use "abstracts/mixins";
+@use "components/header";
 @use "components/catcss"; 
 @use "components/footer";
